# log_processor

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  REPORT.md  build-linux.sh  build-windows.ps1
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark.cpp
data/: .gitkeep
results/: .gitkeep  performance_report.md
scripts/: _check_latest.py  _parse_results.py  generate_logs.py  generate_report.py  run_benchmarks.ps1  run_benchmarks.sh
src/: CMakeLists.txt  main.cpp
src/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h
src/common/: CMakeLists.txt  concurrent_stats.h  scheduler.h  stats.cpp  stats.h  timer.h
src/parser/: CMakeLists.txt  parser.cpp  parser.h
src/reader/: CMakeLists.txt  reader.cpp  reader.h
tests/: CMakeLists.txt  test_analyzer.cpp  test_atomics.cpp  test_parser.cpp  test_reader.cpp  test_stats.cpp  test_threading.cpp
